[package]
name = "t10_dif_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
libc = "0.2"
crc = "3.0"
io-uring = "0.6"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "dif-bench"
path = "src/main.rs"
